<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_discovery"
        android:icon="@drawable/ic_explore"
        android:title="@string/discovery"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_category"
        android:icon="@drawable/ic_grid"
        android:title="@string/category"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_favourite"
        android:icon="@drawable/ic_heart"
        android:title="@string/favourite"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:showAsAction="always" />
</menu>
