<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:clickable="true"
    android:fillViewport="true"
    tools:context=".ui.discovery.DiscoveryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20dp">

        <LinearLayout
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:background="@drawable/bg_gray_conner_10"
            android:gravity="center_vertical"
            android:padding="@dimen/_10dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/color_text_icon"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/what_to_drink_today"
            android:textColor="@color/color_text_icon"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/layout_search" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_suggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            app:shimmer_auto_start="true">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image_suggest"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:riv_corner_radius="@dimen/_20dp" />

            <TextView
                android:id="@+id/text_name_suggest"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200dp"
                android:background="@drawable/background_gradient"
                android:gravity="bottom|center_horizontal"
                android:padding="@dimen/_10dp"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_suggest"
                app:layout_constraintTop_toTopOf="@id/image_suggest" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/text_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/ingredients"
            android:textColor="@color/color_text_icon"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shimmer_suggest" />

        <TextView
            android:id="@+id/text_see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/see_more"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/text_size_normal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/text_ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shimmer_suggest" />

        <LinearLayout
            android:id="@+id/layout_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/text_ingredients">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_ingredients">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/shimmer_item_ingredient" />

                    <include layout="@layout/shimmer_item_ingredient" />

                    <include layout="@layout/shimmer_item_ingredient" />

                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/text_ingredients" />
        </LinearLayout>


        <TextView
            android:id="@+id/text_cocktail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/cocktail"
            android:textColor="@color/color_text_icon"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/layout_ingredients" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_cocktails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_cocktail">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">

                <include
                    layout="@layout/shimmer_item_drink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp" />

                <include
                    layout="@layout/shimmer_item_drink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp" />

                <include
                    layout="@layout/shimmer_item_drink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp" />

                <include
                    layout="@layout/shimmer_item_drink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp" />

            </GridLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_cocktail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/text_cocktail"
            app:spanCount="2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
